--- a/src/scss/generic/_font-face.scss
+++ b/src/scss/generic/_font-face.scss
@@ -10,4 +10,10 @@ body {
   font-weight: 400;
   font-style: normal;
   line-height: 1.5;
+
+  p {
+    strong {
+      font-weight: 700;
+    }
+  }
 }
